--- a/node-docker-app/build-test-app.yml
+++ b/node-docker-app/build-test-app.yml
@@ -36,4 +36,4 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    #hey
+    #let's see if we can pull the image we just pushed
